--- a/page/templates/subwayStation.html
+++ b/page/templates/subwayStation.html
@@ -116,6 +116,10 @@ button[type=submit] {
             border-width: 0;
             color: white;
             width: 200px }
+button[type=submit]:hover{
+            background-color:#db4433;
+
+        }
         </style>
     </head>
 
